[package]
name = "solana-balance-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.3.6" # Or latest stable
solana-sdk = "2.3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "balance_fetcher_demo"
path = "src/main.rs"